docs/api/qiskit/0.43/qiskit.algorithms.VQD.mdx
---
title: VQD
description: API reference for qiskit.algorithms.VQD
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.VQD
---

# VQD

<Class id="qiskit.algorithms.VQD" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/eigen_solvers/vqd.py" signature="VQD(ansatz=None, k=2, betas=None, optimizer=None, initial_point=None, gradient=None, expectation=None, include_custom=False, max_evals_grouped=1, callback=None, quantum_instance=None)">
  Bases: `VariationalAlgorithm`, [`Eigensolver`](qiskit.algorithms.Eigensolver "qiskit.algorithms.eigen_solvers.eigen_solver.Eigensolver")

  Deprecated: Variational Quantum Deflation algorithm.

  The VQD class has been superseded by the [`qiskit.algorithms.eigensolvers.VQD`](qiskit.algorithms.eigensolvers.VQD "qiskit.algorithms.eigensolvers.VQD") class. This class will be deprecated in a future release and subsequently removed after that.

  [VQD](https://arxiv.org/abs/1805.08138) is a quantum algorithm that uses a variational technique to find the k eigenvalues of the Hamiltonian $H$ of a given system.

  The algorithm computes excited state energies of generalised hamiltonians by optimising over a modified cost function where each succesive eigen value is calculated iteratively by introducing an overlap term with all the previously computed eigenstaes that must be minimised, thus ensuring higher energy eigen states are found.

  An instance of VQD requires defining three algorithmic sub-components: an integer k denoting the number of eigenstates to calculate, a trial state (a.k.a. ansatz)which is a `QuantumCircuit`, and one of the classical [`optimizers`](qiskit.algorithms.optimizers#module-qiskit.algorithms.optimizers "qiskit.algorithms.optimizers"). The ansatz is varied, via its set of parameters, by the optimizer, such that it works towards a state, as determined by the parameters applied to the ansatz, that will result in the minimum expectation values being measured of the input operator (Hamiltonian). The algorithm does this by iteratively refining each excited state to be orthogonal to all the previous excited states.

  An optional array of parameter values, via the *initial\_point*, may be provided as the starting point for the search of the minimum eigenvalue. This feature is particularly useful such as when there are reasons to believe that the solution point is close to a particular point.

  The length of the *initial\_point* list value must match the number of the parameters expected by the ansatz being used. If the *initial\_point* is left at the default of `None`, then VQD will look to the ansatz for a preferred value, based on its given initial state. If the ansatz returns `None`, then a random point will be generated within the parameter bounds set, as per above. If the ansatz provides `None` as the lower bound, then VQD will default it to $-2\pi$; similarly, if the ansatz returns `None` as the upper bound, the default value will be $2\pi$.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.algorithms.eigen_solvers.vqd.VQD` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. Instead, use the class `qiskit.algorithms.eigensolvers.VQD`.See [https://qisk.it/algo\_migration](https://qisk.it/algo_migration) for a migration guide.
  </Admonition>

  **Parameters**

  *   **ansatz** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") *| None*) – A parameterized circuit used as ansatz for the wave function.
  *   **k** (*int*) – the number of eigenvalues to return. Returns the lowest k eigenvalues.
  *   **betas** (*list\[float] | None*) – beta parameters in the VQD paper. Should have length k - 1, with k the number of excited states. These hyperparameters balance the contribution of each overlap term to the cost function and have a default value computed as the mean square sum of the coefficients of the observable.
  *   **optimizer** ([*Optimizer*](qiskit.algorithms.optimizers.Optimizer "qiskit.algorithms.optimizers.Optimizer")  *|*[*Minimizer*](qiskit.algorithms.optimizers.Minimizer "qiskit.algorithms.optimizers.Minimizer") *| None*) – A classical optimizer. Can either be a Qiskit optimizer or a callable that takes an array as input and returns a Qiskit or SciPy optimization result.
  *   **initial\_point** (*np.ndarray | None*) – An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then VQD will look to the ansatz for a preferred point and if not will simply compute a random one.
  *   **gradient** ([*GradientBase*](qiskit.opflow.gradients.GradientBase "qiskit.opflow.gradients.GradientBase") *| Callable | None*) – An optional gradient function or operator for optimizer. Only used to compute the ground state at the moment.
  *   **expectation** ([*ExpectationBase*](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.ExpectationBase") *| None*) – The Expectation converter for taking the average value of the Observable over the ansatz state function. When `None` (the default) an [`ExpectationFactory`](qiskit.opflow.expectations.ExpectationFactory "qiskit.opflow.expectations.ExpectationFactory") is used to select an appropriate expectation based on the operator and backend. When using Aer qasm\_simulator backend, with paulis, it is however much faster to leverage custom Aer function for the computation but, although VQD performs much faster with it, the outcome is ideal, with no shot noise, like using a state vector simulator. If you are just looking for the quickest performance when choosing Aer qasm\_simulator and the lack of shot noise is not an issue then set include\_custom parameter here to `True` (defaults to `False`).
  *   **include\_custom** (*bool*) – When expectation parameter here is None setting this to `True` will allow the factory to include the custom Aer pauli expectation.
  *   **max\_evals\_grouped** (*int*) – Max number of evaluations performed simultaneously. Signals the given optimizer that more than one set of parameters can be supplied so that multiple points to compute the gradient can be passed and if computed in parallel potentially the expectation values can be computed in parallel. Typically this is possible when a finite difference gradient is used by the optimizer such that improve overall execution time. Deprecated if a gradient operator or function is given.
  *   **callback** (*Callable\[\[int, np.ndarray, float, float, int], None] | None*) – a callback that can access the intermediate data during the optimization. Four parameter values are passed to the callback as follows during each evaluation by the optimizer for its current set of parameters as it works towards the minimum. These are: the evaluation count, the optimizer parameters for the ansatz, the evaluated mean, the evaluated standard deviation, and the current step.
  *   **quantum\_instance** ([*QuantumInstance*](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance")  *|*[*Backend*](qiskit.providers.Backend "qiskit.providers.Backend") *| None*) – Quantum Instance or Backend

  ## Methods

  <span id="qiskit-algorithms-vqd-compute-eigenvalues" />

  ### compute\_eigenvalues

  <Function id="qiskit.algorithms.VQD.compute_eigenvalues" name="compute_eigenvalues" signature="VQD.compute_eigenvalues(operator, aux_operators=None)">
    Computes eigenvalues. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

    **Parameters**

    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – Qubit operator of the Observable
    *   **aux\_operators** (*ListOrDict\[*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")*] | None*) – Optional list of auxiliary operators to be evaluated with the eigenstate of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators, total particle count operators so we can get values for these at the ground state.

    **Returns**

    EigensolverResult

    **Return type**

    [EigensolverResult](qiskit.algorithms.EigensolverResult "qiskit.algorithms.EigensolverResult")
  </Function>

  <span id="qiskit-algorithms-vqd-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.algorithms.VQD.construct_circuit" name="construct_circuit" signature="VQD.construct_circuit(parameter, operator)">
    Return the circuits used to compute the expectation value.

    **Parameters**

    *   **parameter** (*list\[float] | list\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.Parameter")*] | np.ndarray*) – Parameters for the ansatz circuit.
    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – Qubit operator of the Observable

    **Returns**

    A list of the circuits used to compute the expectation value.

    **Return type**

    list\[[QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")]
  </Function>

  <span id="qiskit-algorithms-vqd-construct-expectation" />

  ### construct\_expectation

  <Function id="qiskit.algorithms.VQD.construct_expectation" name="construct_expectation" signature="VQD.construct_expectation(parameter, operator, return_expectation=False)">
    Generate the ansatz circuit and expectation value measurement, and return their runnable composition.

    **Parameters**

    *   **parameter** (*list\[float] | list\[*[*Parameter*](qiskit.circuit.Parameter "qiskit.circuit.Parameter")*] | np.ndarray*) – Parameters for the ansatz circuit.
    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – Qubit operator of the Observable
    *   **return\_expectation** (*bool*) – If True, return the `ExpectationBase` expectation converter used in the construction of the expectation value. Useful e.g. to compute the standard deviation of the expectation value.

    **Returns**

    The Operator equalling the measurement of the ansatz `StateFn` by the Observable’s expectation `StateFn`, and, optionally, the expectation converter.

    **Raises**

    *   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no operator has been provided.
    *   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no expectation is passed and None could be inferred via the ExpectationFactory.

    **Return type**

    [OperatorBase](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase") | tuple\[[OperatorBase](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase"), [ExpectationBase](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.ExpectationBase")]
  </Function>

  <span id="qiskit-algorithms-vqd-get-energy-evaluation" />

  ### get\_energy\_evaluation

  <Function id="qiskit.algorithms.VQD.get_energy_evaluation" name="get_energy_evaluation" signature="VQD.get_energy_evaluation(step, operator, return_expectation=False, prev_states=None)">
    Returns a function handle to evaluates the energy at given parameters for the ansatz.

    This return value is the objective function to be passed to the optimizer for evaluation.

    **Parameters**

    *   **step** (*int*) – level of energy being calculated. 0 for ground, 1 for first excited state…
    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.OperatorBase")) – The operator whose energy to evaluate.
    *   **return\_expectation** (*bool*) – If True, return the `ExpectationBase` expectation converter used in the construction of the expectation value. Useful e.g. to evaluate other operators with the same expectation value converter.
    *   **prev\_states** (*list\[np.ndarray] | None*) – List of parameters from previous rounds of optimization.

    **Returns**

    A callable that computes and returns the energy of the hamiltonian of each parameter, and, optionally, the expectation

    **Raises**

    *   **RuntimeError** – If the circuit is not parameterized (i.e. has 0 free parameters).
    *   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If operator was not provided.

    **Return type**

    Callable\[\[np.ndarray], float | list\[float]] | tuple\[Callable\[\[np.ndarray], float | list\[float]], [ExpectationBase](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.ExpectationBase")]
  </Function>

  <span id="qiskit-algorithms-vqd-print-settings" />

  ### print\_settings

  <Function id="qiskit.algorithms.VQD.print_settings" name="print_settings" signature="VQD.print_settings()">
    Preparing the setting of VQD into a string.

    **Returns**

    the formatted setting of VQD.

    **Return type**

    str
  </Function>

  <span id="qiskit-algorithms-vqd-supports-aux-operators" />

  ### supports\_aux\_operators

  <Function id="qiskit.algorithms.VQD.supports_aux_operators" name="supports_aux_operators" signature="classmethod VQD.supports_aux_operators()">
    Whether computing the expectation value of auxiliary operators is supported.

    **Returns**

    True if aux\_operator expectations can be evaluated, False otherwise

    **Return type**

    bool
  </Function>

  ## Attributes

  ### ansatz

  <Attribute id="qiskit.algorithms.VQD.ansatz" name="ansatz">
    Returns the ansatz.
  </Attribute>

  ### callback

  <Attribute id="qiskit.algorithms.VQD.callback" name="callback">
    Returns callback
  </Attribute>

  ### expectation

  <Attribute id="qiskit.algorithms.VQD.expectation" name="expectation">
    The expectation value algorithm used to construct the expectation measurement from the observable.
  </Attribute>

  ### gradient

  <Attribute id="qiskit.algorithms.VQD.gradient" name="gradient">
    Returns the gradient.
  </Attribute>

  ### include\_custom

  <Attribute id="qiskit.algorithms.VQD.include_custom" name="include_custom">
    Returns include\_custom
  </Attribute>

  ### initial\_point

  <Attribute id="qiskit.algorithms.VQD.initial_point" name="initial_point">
    Returns initial point.
  </Attribute>

  ### max\_evals\_grouped

  <Attribute id="qiskit.algorithms.VQD.max_evals_grouped" name="max_evals_grouped">
    Returns max\_evals\_grouped
  </Attribute>

  ### optimizer

  <Attribute id="qiskit.algorithms.VQD.optimizer" name="optimizer">
    Returns optimizer
  </Attribute>

  ### quantum\_instance

  <Attribute id="qiskit.algorithms.VQD.quantum_instance" name="quantum_instance">
    Returns quantum instance.
  </Attribute>

  ### setting

  <Attribute id="qiskit.algorithms.VQD.setting" name="setting">
    Prepare the setting of VQD as a string.
  </Attribute>
</Class>

